# mlt_cntr_n9

./: .env  .gitignore  docker-compose-dev.yaml  docker-compose-shipyard.yaml
.devcontainer/actix-webapp-container/: devcontainer.json
.devcontainer/python-container/: devcontainer.json
.devcontainer/ts-frontend-prod/: devcontainer.json
.devcontainer/ts-frontend-simple-container/: devcontainer.json
.github/workflows/: image-ci.yaml
actix-webapp/: .env  Cargo.toml  Dockerfile  _ENV  server-cert.pem
actix-webapp/src/: main.rs
actix-webapp/src/views/: mod.rs
actix-webapp/src/views/to_do/: mod.rs
actix-webapp/tests/: my_module_test.rs
ts-frontend/: .dockerignore  Dockerfile.3  Dockerfile.5  nginx.conf  package-lock.json  package.json  port.js  tsconfig.json  webpack.config.js  webpack.devserver.conf.js
ts-frontend/src/: app.ts  index.html  index.ts
ts-frontend/test/: example.test.js
